--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -28,7 +28,14 @@
       </div>
     </div>
 
+<!-- <button class="button button-block button-dark" ng-click="identifyUser()">
+  Identify a user
+</button> -->
 
+
+<!-- <button class="button button-block button-positive" ng-if="identified" ng-click="pushRegister()">
+  Register for Push
+</button> -->
 
 
   </ion-content>
